apps/node-app/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-api-deployment
  labels:
    system: node-app
    app: node-app-api
    environment: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-app-api
  template:
    metadata:
      labels:
        system: node-app
        app: node-app-api
        environment: production
    spec:
      containers:
        - name: node-app-api-container
          image: acromnip01.azurecr.io/node-app-api:0.0.0.0
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /system/ping
              port: 8080
          livenessProbe:
            httpGet:
              path: /system/ping
              port: 8080
