apps/node-app/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-api-service
  labels:
    system: node-app
    app: node-app-api
    environment: production
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: node-app-api
